@@ -22,6 +22,7 @@ export(rule_fill_gradient2_old)
 export(rule_fill_gradient_)
 export(rule_fill_gradient_old)
 export(rule_text_bold)
+export(rule_text_color)
 export(show_columns)
 export(show_columns_)
 export(show_rows)
