@@ -1,7 +1,7 @@
 Introduction to condformat
 ================
 Sergio Oller
-2017-10-19
+2017-10-25
 
 condformat renders a data frame in which cells in columns are formatted according to several rules or criteria.
 
@@ -43,12 +43,9 @@ condformat(iris[c(1:5,70:75, 120:125),]) %>%
                      expression = Sepal.Width > Sepal.Length - 2.25,
                      colours = c("TRUE" = "#7D00FF")) %>%
   rule_fill_gradient2(Petal.Length) %>%
-  rule_css(Sepal.Length,
-           expression = ifelse(Species == "setosa", "bold", "regular"),
-           css_field = "font-weight") %>%
-  rule_css(Sepal.Length,
-           expression = ifelse(Species == "setosa", "yellow", "black"),
-           css_field = "color")
+  rule_text_bold(c(Sepal.Length, Species), Species == "setosa") %>%
+  rule_text_color(Sepal.Length,
+                  expression = ifelse(Species == "setosa", "yellow", ""))
 ```
 
 <table class="gmisc_table" style="border-collapse: collapse; margin-top: 1em; margin-bottom: 1em;">
@@ -78,19 +75,19 @@ Species
 <td style="text-align: left;">
 1
 </td>
-<td style="; background-color: #7D00FF; font-weight: bold; color: yellow; text-align: center;">
+<td style="background-color: #7D00FF; font-weight: bold; color: yellow; text-align: center;">
 5.1
 </td>
-<td style="; background-color: #7D00FF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #7D00FF; text-align: center;">
 3.5
 </td>
-<td style="; background-color: #872B29; font-weight: ; color:; text-align: center;">
+<td style="background-color: #872B29; text-align: center;">
 1.4
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 0.2
 </td>
-<td style="; background-color: #F8766D; font-weight: ; color:; text-align: center;">
+<td style="background-color: #F8766D; font-weight: bold; text-align: center;">
 setosa
 </td>
 </tr>
@@ -98,19 +95,19 @@ setosa
 <td style="text-align: left;">
 2
 </td>
-<td style="; background-color: #7D00FF; font-weight: bold; color: yellow; text-align: center;">
+<td style="background-color: #7D00FF; font-weight: bold; color: yellow; text-align: center;">
 4.9
 </td>
-<td style="; background-color: #7D00FF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #7D00FF; text-align: center;">
 3.0
 </td>
-<td style="; background-color: #872B29; font-weight: ; color:; text-align: center;">
+<td style="background-color: #872B29; text-align: center;">
 1.4
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 0.2
 </td>
-<td style="; background-color: #F8766D; font-weight: ; color:; text-align: center;">
+<td style="background-color: #F8766D; font-weight: bold; text-align: center;">
 setosa
 </td>
 </tr>
@@ -118,19 +115,19 @@ setosa
 <td style="text-align: left;">
 3
 </td>
-<td style="; background-color: #7D00FF; font-weight: bold; color: yellow; text-align: center;">
+<td style="background-color: #7D00FF; font-weight: bold; color: yellow; text-align: center;">
 4.7
 </td>
-<td style="; background-color: #7D00FF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #7D00FF; text-align: center;">
 3.2
 </td>
-<td style="; background-color: #832424; font-weight: ; color:; text-align: center;">
+<td style="background-color: #832424; text-align: center;">
 1.3
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 0.2
 </td>
-<td style="; background-color: #F8766D; font-weight: ; color:; text-align: center;">
+<td style="background-color: #F8766D; font-weight: bold; text-align: center;">
 setosa
 </td>
 </tr>
@@ -138,19 +135,19 @@ setosa
 <td style="text-align: left;">
 4
 </td>
-<td style="; background-color: #7D00FF; font-weight: bold; color: yellow; text-align: center;">
+<td style="background-color: #7D00FF; font-weight: bold; color: yellow; text-align: center;">
 4.6
 </td>
-<td style="; background-color: #7D00FF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #7D00FF; text-align: center;">
 3.1
 </td>
-<td style="; background-color: #8C322F; font-weight: ; color:; text-align: center;">
+<td style="background-color: #8C322F; text-align: center;">
 1.5
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 0.2
 </td>
-<td style="; background-color: #F8766D; font-weight: ; color:; text-align: center;">
+<td style="background-color: #F8766D; font-weight: bold; text-align: center;">
 setosa
 </td>
 </tr>
@@ -158,19 +155,19 @@ setosa
 <td style="text-align: left;">
 5
 </td>
-<td style="; background-color: #7D00FF; font-weight: bold; color: yellow; text-align: center;">
+<td style="background-color: #7D00FF; font-weight: bold; color: yellow; text-align: center;">
 5.0
 </td>
-<td style="; background-color: #7D00FF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #7D00FF; text-align: center;">
 3.6
 </td>
-<td style="; background-color: #872B29; font-weight: ; color:; text-align: center;">
+<td style="background-color: #872B29; text-align: center;">
 1.4
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 0.2
 </td>
-<td style="; background-color: #F8766D; font-weight: ; color:; text-align: center;">
+<td style="background-color: #F8766D; font-weight: bold; text-align: center;">
 setosa
 </td>
 </tr>
@@ -178,19 +175,19 @@ setosa
 <td style="text-align: left;">
 6
 </td>
-<td style="; background-color: #FFFFFF; font-weight: regular; color: black; text-align: center;">
+<td style="background-color: #FFFFFF; font-weight: normal; text-align: center;">
 5.6
 </td>
-<td style="; background-color: #FFFFFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #FFFFFF; text-align: center;">
 2.5
 </td>
-<td style="; background-color: #E7CAC6; font-weight: ; color:; text-align: center;">
+<td style="background-color: #E7CAC6; text-align: center;">
 3.9
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 1.1
 </td>
-<td style="; background-color: #00BA38; font-weight: ; color:; text-align: center;">
+<td style="background-color: #00BA38; font-weight: normal; text-align: center;">
 versicolor
 </td>
 </tr>
@@ -198,19 +195,19 @@ versicolor
 <td style="text-align: left;">
 7
 </td>
-<td style="; background-color: #FFFFFF; font-weight: regular; color: black; text-align: center;">
+<td style="background-color: #FFFFFF; font-weight: normal; text-align: center;">
 5.9
 </td>
-<td style="; background-color: #FFFFFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #FFFFFF; text-align: center;">
 3.2
 </td>
-<td style="; background-color: #F9F9FC; font-weight: ; color:; text-align: center;">
+<td style="background-color: #F9F9FC; text-align: center;">
 4.8
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 1.8
 </td>
-<td style="; background-color: #00BA38; font-weight: ; color:; text-align: center;">
+<td style="background-color: #00BA38; font-weight: normal; text-align: center;">
 versicolor
 </td>
 </tr>
@@ -218,19 +215,19 @@ versicolor
 <td style="text-align: left;">
 8
 </td>
-<td style="; background-color: #FFFFFF; font-weight: regular; color: black; text-align: center;">
+<td style="background-color: #FFFFFF; font-weight: normal; text-align: center;">
 6.1
 </td>
-<td style="; background-color: #FFFFFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #FFFFFF; text-align: center;">
 2.8
 </td>
-<td style="; background-color: #EAD0CD; font-weight: ; color:; text-align: center;">
+<td style="background-color: #EAD0CD; text-align: center;">
 4.0
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 1.3
 </td>
-<td style="; background-color: #00BA38; font-weight: ; color:; text-align: center;">
+<td style="background-color: #00BA38; font-weight: normal; text-align: center;">
 versicolor
 </td>
 </tr>
@@ -238,19 +235,19 @@ versicolor
 <td style="text-align: left;">
 9
 </td>
-<td style="; background-color: #FFFFFF; font-weight: regular; color: black; text-align: center;">
+<td style="background-color: #FFFFFF; font-weight: normal; text-align: center;">
 6.3
 </td>
-<td style="; background-color: #FFFFFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #FFFFFF; text-align: center;">
 2.5
 </td>
-<td style="; background-color: #F4F2F9; font-weight: ; color:; text-align: center;">
+<td style="background-color: #F4F2F9; text-align: center;">
 4.9
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 1.5
 </td>
-<td style="; background-color: #00BA38; font-weight: ; color:; text-align: center;">
+<td style="background-color: #00BA38; font-weight: normal; text-align: center;">
 versicolor
 </td>
 </tr>
@@ -258,19 +255,19 @@ versicolor
 <td style="text-align: left;">
 10
 </td>
-<td style="; background-color: #FFFFFF; font-weight: regular; color: black; text-align: center;">
+<td style="background-color: #FFFFFF; font-weight: normal; text-align: center;">
 6.1
 </td>
-<td style="; background-color: #FFFFFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #FFFFFF; text-align: center;">
 2.8
 </td>
-<td style="; background-color: #FFFFFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #FFFFFF; text-align: center;">
 4.7
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 1.2
 </td>
-<td style="; background-color: #00BA38; font-weight: ; color:; text-align: center;">
+<td style="background-color: #00BA38; font-weight: normal; text-align: center;">
 versicolor
 </td>
 </tr>
@@ -278,19 +275,19 @@ versicolor
 <td style="text-align: left;">
 11
 </td>
-<td style="; background-color: #FFFFFF; font-weight: regular; color: black; text-align: center;">
+<td style="background-color: #FFFFFF; font-weight: normal; text-align: center;">
 6.4
 </td>
-<td style="; background-color: #FFFFFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #FFFFFF; text-align: center;">
 2.9
 </td>
-<td style="; background-color: #F3E4E2; font-weight: ; color:; text-align: center;">
+<td style="background-color: #F3E4E2; text-align: center;">
 4.3
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 1.3
 </td>
-<td style="; background-color: #00BA38; font-weight: ; color:; text-align: center;">
+<td style="background-color: #00BA38; font-weight: normal; text-align: center;">
 versicolor
 </td>
 </tr>
@@ -298,19 +295,19 @@ versicolor
 <td style="text-align: left;">
 12
 </td>
-<td style="; background-color: #FFFFFF; font-weight: regular; color: black; text-align: center;">
+<td style="background-color: #FFFFFF; font-weight: normal; text-align: center;">
 6.0
 </td>
-<td style="; background-color: #FFFFFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #FFFFFF; text-align: center;">
 2.2
 </td>
-<td style="; background-color: #EEECF6; font-weight: ; color:; text-align: center;">
+<td style="background-color: #EEECF6; text-align: center;">
 5.0
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 1.5
 </td>
-<td style="; background-color: #619CFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #619CFF; font-weight: normal; text-align: center;">
 virginica
 </td>
 </tr>
@@ -318,19 +315,19 @@ virginica
 <td style="text-align: left;">
 13
 </td>
-<td style="; background-color: #FFFFFF; font-weight: regular; color: black; text-align: center;">
+<td style="background-color: #FFFFFF; font-weight: normal; text-align: center;">
 6.9
 </td>
-<td style="; background-color: #FFFFFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #FFFFFF; text-align: center;">
 3.2
 </td>
-<td style="; background-color: #C8C1E1; font-weight: ; color:; text-align: center;">
+<td style="background-color: #C8C1E1; text-align: center;">
 5.7
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 2.3
 </td>
-<td style="; background-color: #619CFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #619CFF; font-weight: normal; text-align: center;">
 virginica
 </td>
 </tr>
@@ -338,19 +335,19 @@ virginica
 <td style="text-align: left;">
 14
 </td>
-<td style="; background-color: #FFFFFF; font-weight: regular; color: black; text-align: center;">
+<td style="background-color: #FFFFFF; font-weight: normal; text-align: center;">
 5.6
 </td>
-<td style="; background-color: #FFFFFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #FFFFFF; text-align: center;">
 2.8
 </td>
-<td style="; background-color: #F4F2F9; font-weight: ; color:; text-align: center;">
+<td style="background-color: #F4F2F9; text-align: center;">
 4.9
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 2.0
 </td>
-<td style="; background-color: #619CFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #619CFF; font-weight: normal; text-align: center;">
 virginica
 </td>
 </tr>
@@ -358,19 +355,19 @@ virginica
 <td style="text-align: left;">
 15
 </td>
-<td style="; background-color: #FFFFFF; font-weight: regular; color: black; text-align: center;">
+<td style="background-color: #FFFFFF; font-weight: normal; text-align: center;">
 7.7
 </td>
-<td style="; background-color: #FFFFFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #FFFFFF; text-align: center;">
 2.8
 </td>
-<td style="; background-color: #9085C3; font-weight: ; color:; text-align: center;">
+<td style="background-color: #9085C3; text-align: center;">
 6.7
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 2.0
 </td>
-<td style="; background-color: #619CFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #619CFF; font-weight: normal; text-align: center;">
 virginica
 </td>
 </tr>
@@ -378,19 +375,19 @@ virginica
 <td style="text-align: left;">
 16
 </td>
-<td style="; background-color: #FFFFFF; font-weight: regular; color: black; text-align: center;">
+<td style="background-color: #FFFFFF; font-weight: normal; text-align: center;">
 6.3
 </td>
-<td style="; background-color: #FFFFFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #FFFFFF; text-align: center;">
 2.7
 </td>
-<td style="; background-color: #F4F2F9; font-weight: ; color:; text-align: center;">
+<td style="background-color: #F4F2F9; text-align: center;">
 4.9
 </td>
-<td style="; background-color: ; font-weight: ; color:; text-align: center;">
+<td style="text-align: center;">
 1.8
 </td>
-<td style="; background-color: #619CFF; font-weight: ; color:; text-align: center;">
+<td style="background-color: #619CFF; font-weight: normal; text-align: center;">
 virginica
 </td>
 </tr>
@@ -398,19 +395,19 @@ virginica
 <td style="border-bottom: 2px solid grey; text-align: left;">
 17
 </td>
-<td style="; background-color: #FFFFFF; font-weight: regular; color: black; border-bottom: 2px solid grey; text-align: center;">
+<td style="background-color: #FFFFFF; font-weight: normal; border-bottom: 2px solid grey; text-align: center;">
 6.7
 </td>
-<td style="; background-color: #FFFFFF; font-weight: ; color:; border-bottom: 2px solid grey; text-align: center;">
+<td style="background-color: #FFFFFF; border-bottom: 2px solid grey; text-align: center;">
 3.3
 </td>
-<td style="; background-color: #C8C1E1; font-weight: ; color:; border-bottom: 2px solid grey; text-align: center;">
+<td style="background-color: #C8C1E1; border-bottom: 2px solid grey; text-align: center;">
 5.7
 </td>
-<td style="; background-color: ; font-weight: ; color:; border-bottom: 2px solid grey; text-align: center;">
+<td style="border-bottom: 2px solid grey; text-align: center;">
 2.1
 </td>
-<td style="; background-color: #619CFF; font-weight: ; color:; border-bottom: 2px solid grey; text-align: center;">
+<td style="background-color: #619CFF; font-weight: normal; border-bottom: 2px solid grey; text-align: center;">
 virginica
 </td>
 </tr>
