@@ -70,5 +70,6 @@ condformat(iris[c(1:5, 70:75, 120:125), ]) \%>\%
 Other rule: \code{\link{rule_css}},
   \code{\link{rule_fill_gradient2}},
   \code{\link{rule_fill_gradient}},
-  \code{\link{rule_text_bold}}
+  \code{\link{rule_text_bold}},
+  \code{\link{rule_text_color}}
 }
