@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/rule_text_bold.R
-\name{rule_text_bold}
-\alias{rule_text_bold}
-\title{Use bold text if a condition is met}
+% Please edit documentation in R/rule_text_color.R
+\name{rule_text_color}
+\alias{rule_text_color}
+\title{Give a color to the text according to some expression}
 \usage{
-rule_text_bold(x, columns, expression, na.bold = FALSE, lockcells = FALSE)
+rule_text_color(x, columns, expression, na.color = "", lockcells = FALSE)
 }
 \arguments{
 \item{x}{A condformat object, typically created with `condformat(x)`}
@@ -12,24 +12,24 @@ rule_text_bold(x, columns, expression, na.bold = FALSE, lockcells = FALSE)
 \item{columns}{A character vector with column names to be coloured. Optionally
 `tidyselect::select_helpers` can be used.}
 
-\item{expression}{Condition that evaluates to `TRUE` for the rows where bold text should be applied.}
+\item{expression}{Condition that evaluates to color names for the rows where text should be colored}
 
-\item{na.bold}{If `TRUE`, make missing values bold.}
+\item{na.color}{Color for missing values}
 
 \item{lockcells}{logical value determining if no further rules should be applied to the affected cells.}
 }
 \description{
-Use bold text if a condition is met
+Give a color to the text according to some expression
 }
 \examples{
 data(iris)
 condformat(iris[c(1:5, 51:55, 101:105),]) \%>\%
-  rule_text_bold(Species, expression = Species == "setosa")
+  rule_text_color(Species, expression = ifelse(Species == "setosa", "blue", ""))
 }
 \seealso{
 Other rule: \code{\link{rule_css}},
   \code{\link{rule_fill_discrete}},
   \code{\link{rule_fill_gradient2}},
   \code{\link{rule_fill_gradient}},
-  \code{\link{rule_text_color}}
+  \code{\link{rule_text_bold}}
 }
