@@ -4,6 +4,7 @@ condformat 0.7.0.9000
 * Replace dependency: Use grDevices instead of gplots
 * Depend on knitr 1.17.9: slidy and other rmarkdown formats are properly detected (#13)
 * Feature: rule_text_bold support both in HTML and PDF output
+* Feature: rule_text_color (both HTML and PDF outputs)
 
 condformat 0.7.0
 ----------------------------------------------------------------
